...
import pt.isel.gomoku.ui.theme.Brown
import pt.isel.gomoku.ui.theme.DarkBrown
import pt.isel.gomoku.ui.theme.GomokuTheme
import pt.isel.gomoku.ui.theme.Yellow

const val SignUpScreenTag = "SignUpScreenTag"
const val SignUpNameInputTag = "SignUpNameInputTag"
const val SignUpEmailInputTag = "SignUpEmailInputTag"
const val SignUpPasswordInputTag = "SignUpPasswordInputTag"

@Composable
fun SignUpScreen(
    phaseState: IOState<UserIdOutputModel> = Idle,
    name: String,
    email: String,
...
