...
import androidx.compose.ui.unit.Dp
import androidx.compose.ui.unit.dp
import coil.compose.SubcomposeAsyncImage
import pt.isel.gomoku.R
import pt.isel.gomoku.ui.theme.DarkBrown

const val AvatarTag = "MainScreenAvatarTag"
val userAvatar = SemanticsPropertyKey<String?>("UserAvatar")
var SemanticsPropertyReceiver.userAvatar by userAvatar

@Composable
fun AsyncAvatar(
    avatar: String? = null,
...
