...
import pt.isel.gomoku.ui.theme.GomokuTheme
import pt.isel.gomoku.ui.theme.Green
import pt.isel.gomoku.ui.theme.Yellow

const val LoginScreenTag = "LoginScreenTag"
const val LoginButtonTag = "LoginButtonTag"
const val SignUpButtonTag = "SignUpButtonTag"
const val LoginEmailInputTag = "EmailInputTag"
const val LoginPasswordInputTag = "PasswordTag"

@Composable
fun LoginScreen(
    phaseState: IOState<Unit> = Idle,
...
